# twoonethree

./: .coveragerc  .editorconfig  .gitignore  .vendor_urls  README.rst  manage.py  mo_83.csv  pyproject.toml  requirements.txt
.envs/.local/: .postgres
.ipynb_checkpoints/: fundraising_report-checkpoint.ipynb
config/: urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
contact/: views.py
contact/templates/contact/: contact-us.html
docs/: Makefile  conf.py  index.rst  make.bat
mec/: apps.py  assign_districts.py  dash_apps.py  load_shapefiles.py  models.py  urls.py  views.py
mec/migrations/: 0001_initial.py  0002_address_coordinates.py  0003_district.py  0004_auto_20191106_0816.py  0005_address_districts.py
notebooks/: Untitled.ipynb  fundraising_report.ipynb
notebooks/.ipynb_checkpoints/: 95th- initial list-checkpoint.csv  fundraising_report-checkpoint.ipynb
requirements/: base.txt  local.txt  production.txt
shapefiles/tl_2016_29_sldl/: tl_2017_29_sldl.dbf  tl_2017_29_sldl.shp.ea.iso.xml  tl_2017_29_sldl.shp.iso.xml  tl_2017_29_sldl.shp.xml  tl_2017_29_sldl.shx
shapefiles/tl_2016_29_sldu/: tl_2016_29_sldu.dbf  tl_2016_29_sldu.shp  tl_2016_29_sldu.shp.ea.iso.xml  tl_2016_29_sldu.shp.iso.xml  tl_2016_29_sldu.shp.xml  tl_2016_29_sldu.shx
shapefiles/tl_2018_us_cd116/: tl_2018_us_cd116.dbf  tl_2018_us_cd116.shp
shapefiles/wards/: POL_WRD_2010_Prec.dbf  POL_WRD_2010_Prec.shp  POL_WRD_2010_Prec.shx
twoonethree/: conftest.py
twoonethree/templates/: base.html
twoonethree/users/: admin.py  apps.py  urls.py
(+11 files in other folders)
