[tool.poetry]
name = "twoonethree"
version = "0.1.0"
description = ""
authors = ["Tyler Schlichenmeyer <tyler.schlichenmeyer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.0.7"
django-environ = "^0.4.5"
jupyterlab = "^2.1.4"
django-crispy-forms = "^1.9.1"
django-allauth = "^0.42.0"
django-rest-framework = "^0.1.0"
django-plotly-dash = "^1.3.1"
django-extensions = "^2.2.9"
tqdm = "^4.46.1"
pandas = "^1.0.4"
geopandas = "^0.7.0"
django-pandas = "^0.6.2"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "^2.2"
psycopg2-binary = "^2.8.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
